Fix contrast on the titles of the project container

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -196,6 +196,10 @@ header {
   align-items: center;
 }
 
+.project h3.black {
+  color: black;
+}
+
 .project h3 span {
   box-shadow: 0px 0px 12px -5px black;
   padding: 5px;
